y.output
Terminals unused in grammar

   THERE
   EQUALLING
   UPON
   ADDED
   ASCEND
   DESCEND
   CRY
   FOR
   EXEUNT
   CHANGES
   INCREASES
   DECREASES
   WHENEVER
   DOES
   NONE
   ONE
   TWICE


Grammar

    0 $accept: programm $end

    1 programm: statements

    2 statements: statement
    3           | statements statement

    4 statement: expression
    5          | declaration
    6          | struct_decl
    7          | assign
    8          | output
    9          | if_statement
   10          | while_statement

   11 complex_identifier: ID
   12                   | ID FROM complex_identifier

   13 var_type: INT_TYPE
   14         | STR_TYPE
   15         | BOOLEAN_TYPE
   16         | ID

   17 assign: LET complex_identifier BE expression

   18 declaration: ENTER var_type ID
   19            | ENTER FIXED var_type ID
   20            | ENTER var_type ID TELLING expression
   21            | ENTER FIXED var_type ID TELLING expression

   22 decl_list: declaration
   23          | decl_list ',' declaration

   24 struct_decl: PROCLAIM ID '<' decl_list '>'

   25 expression: '<' expression '>'
   26           | expression ADDING expression
   27           | expression CONSPIRING expression
   28           | expression DIVIDED expression
   29           | expression REMINDING expression
   30           | expression EMPOWERING expression
   31           | expression BOOL_IS expression
   32           | expression BOOL_IS NOT expression
   33           | expression BOOL_LOWER BOOL_THAN expression
   34           | expression BOOL_GREATER BOOL_THAN expression
   35           | expression BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression
   37           | complex_identifier
   38           | NUMBER
   39           | STRING
   40           | BOOL_FALSE
   41           | BOOL_TRUE
   42           | input

   43 output: QUOTE '<' expression '>'

   44 input: SUMMON '<' complex_identifier '>'

   45 if_statement: ASK WHETHER '<' expression '>' THEN '<' statements '>'
   46             | ASK WHETHER '<' expression '>' THEN '<' statements '>' OTHERWISE '<' statements '>'

   47 while_statement: SINCE expression '<' statements '>'


Terminals, with rules where they appear

$end (0) 0
',' (44) 23
'<' (60) 24 25 43 44 45 46 47
'>' (62) 24 25 43 44 45 46 47
error (256)
BE (258) 17
ENTER (259) 18 19 20 21
PROCLAIM (260) 24
LET (261) 17
THERE (262)
EQUALLING (263)
UPON (264)
ADDED (265)
ASCEND (266)
DESCEND (267)
CRY (268)
FOR (269)
EXEUNT (270)
NOT (271) 32
SINCE (272) 47
FROM (273) 12
ASK (274) 45 46
WHETHER (275) 45 46
THEN (276) 45 46
OTHERWISE (277) 46
CHANGES (278)
INCREASES (279)
DECREASES (280)
WHENEVER (281)
DOES (282)
NONE (283)
ONE (284)
TWICE (285)
ID (286) 11 12 16 18 19 20 21 24
TELLING (287) 20 21
FIXED (288) 19 21
INT_TYPE (289) 13
STR_TYPE (290) 14
BOOLEAN_TYPE (291) 15
NUMBER (292) 38
STRING (293) 39
BOOL_TRUE (294) 41
BOOL_FALSE (295) 40
QUOTE (296) 43
SUMMON (297) 44
DIVIDED (298) 28
REMINDING (299) 29
ADDING (300) 26
CONSPIRING (301) 27
EMPOWERING (302) 30
BOOL_IS (303) 31 32
BOOL_UP (304) 35
BOOL_TO (305) 35 36
BOOL_DOWN (306) 36
BOOL_LOWER (307) 33 35
BOOL_GREATER (308) 34 36
BOOL_THAN (309) 33 34 35 36


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
programm (59)
    on left: 1, on right: 0
statements (60)
    on left: 2 3, on right: 1 3 45 46 47
statement (61)
    on left: 4 5 6 7 8 9 10, on right: 2 3
complex_identifier (62)
    on left: 11 12, on right: 12 17 37 44
var_type (63)
    on left: 13 14 15 16, on right: 18 19 20 21
assign (64)
    on left: 17, on right: 7
declaration (65)
    on left: 18 19 20 21, on right: 5 22 23
decl_list (66)
    on left: 22 23, on right: 23 24
struct_decl (67)
    on left: 24, on right: 6
expression (68)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42,
    on right: 4 17 20 21 25 26 27 28 29 30 31 32 33 34 35 36 43 45
    46 47
output (69)
    on left: 43, on right: 8
input (70)
    on left: 44, on right: 42
if_statement (71)
    on left: 45 46, on right: 9
while_statement (72)
    on left: 47, on right: 10


State 0

    0 $accept: . programm $end

    ENTER       shift, and go to state 1
    PROCLAIM    shift, and go to state 2
    LET         shift, and go to state 3
    SINCE       shift, and go to state 4
    ASK         shift, and go to state 5
    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    QUOTE       shift, and go to state 11
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    programm            go to state 14
    statements          go to state 15
    statement           go to state 16
    complex_identifier  go to state 17
    assign              go to state 18
    declaration         go to state 19
    struct_decl         go to state 20
    expression          go to state 21
    output              go to state 22
    input               go to state 23
    if_statement        go to state 24
    while_statement     go to state 25


State 1

   18 declaration: ENTER . var_type ID
   19            | ENTER . FIXED var_type ID
   20            | ENTER . var_type ID TELLING expression
   21            | ENTER . FIXED var_type ID TELLING expression

    ID            shift, and go to state 26
    FIXED         shift, and go to state 27
    INT_TYPE      shift, and go to state 28
    STR_TYPE      shift, and go to state 29
    BOOLEAN_TYPE  shift, and go to state 30

    var_type  go to state 31


State 2

   24 struct_decl: PROCLAIM . ID '<' decl_list '>'

    ID  shift, and go to state 32


State 3

   17 assign: LET . complex_identifier BE expression

    ID  shift, and go to state 6

    complex_identifier  go to state 33


State 4

   47 while_statement: SINCE . expression '<' statements '>'

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 34
    input               go to state 23


State 5

   45 if_statement: ASK . WHETHER '<' expression '>' THEN '<' statements '>'
   46             | ASK . WHETHER '<' expression '>' THEN '<' statements '>' OTHERWISE '<' statements '>'

    WHETHER  shift, and go to state 35


State 6

   11 complex_identifier: ID .
   12                   | ID . FROM complex_identifier

    FROM  shift, and go to state 36

    $default  reduce using rule 11 (complex_identifier)


State 7

   38 expression: NUMBER .

    $default  reduce using rule 38 (expression)


State 8

   39 expression: STRING .

    $default  reduce using rule 39 (expression)


State 9

   41 expression: BOOL_TRUE .

    $default  reduce using rule 41 (expression)


State 10

   40 expression: BOOL_FALSE .

    $default  reduce using rule 40 (expression)


State 11

   43 output: QUOTE . '<' expression '>'

    '<'  shift, and go to state 37


State 12

   44 input: SUMMON . '<' complex_identifier '>'

    '<'  shift, and go to state 38


State 13

   25 expression: '<' . expression '>'

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 39
    input               go to state 23


State 14

    0 $accept: programm . $end

    $end  shift, and go to state 40


State 15

    1 programm: statements .
    3 statements: statements . statement

    ENTER       shift, and go to state 1
    PROCLAIM    shift, and go to state 2
    LET         shift, and go to state 3
    SINCE       shift, and go to state 4
    ASK         shift, and go to state 5
    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    QUOTE       shift, and go to state 11
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    $default  reduce using rule 1 (programm)

    statement           go to state 41
    complex_identifier  go to state 17
    assign              go to state 18
    declaration         go to state 19
    struct_decl         go to state 20
    expression          go to state 21
    output              go to state 22
    input               go to state 23
    if_statement        go to state 24
    while_statement     go to state 25


State 16

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 17

   37 expression: complex_identifier .

    $default  reduce using rule 37 (expression)


State 18

    7 statement: assign .

    $default  reduce using rule 7 (statement)


State 19

    5 statement: declaration .

    $default  reduce using rule 5 (statement)


State 20

    6 statement: struct_decl .

    $default  reduce using rule 6 (statement)


State 21

    4 statement: expression .
   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 4 (statement)


State 22

    8 statement: output .

    $default  reduce using rule 8 (statement)


State 23

   42 expression: input .

    $default  reduce using rule 42 (expression)


State 24

    9 statement: if_statement .

    $default  reduce using rule 9 (statement)


State 25

   10 statement: while_statement .

    $default  reduce using rule 10 (statement)


State 26

   16 var_type: ID .

    $default  reduce using rule 16 (var_type)


State 27

   19 declaration: ENTER FIXED . var_type ID
   21            | ENTER FIXED . var_type ID TELLING expression

    ID            shift, and go to state 26
    INT_TYPE      shift, and go to state 28
    STR_TYPE      shift, and go to state 29
    BOOLEAN_TYPE  shift, and go to state 30

    var_type  go to state 52


State 28

   13 var_type: INT_TYPE .

    $default  reduce using rule 13 (var_type)


State 29

   14 var_type: STR_TYPE .

    $default  reduce using rule 14 (var_type)


State 30

   15 var_type: BOOLEAN_TYPE .

    $default  reduce using rule 15 (var_type)


State 31

   18 declaration: ENTER var_type . ID
   20            | ENTER var_type . ID TELLING expression

    ID  shift, and go to state 53


State 32

   24 struct_decl: PROCLAIM ID . '<' decl_list '>'

    '<'  shift, and go to state 54


State 33

   17 assign: LET complex_identifier . BE expression

    BE  shift, and go to state 55


State 34

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression
   47 while_statement: SINCE expression . '<' statements '>'

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51
    '<'           shift, and go to state 56


State 35

   45 if_statement: ASK WHETHER . '<' expression '>' THEN '<' statements '>'
   46             | ASK WHETHER . '<' expression '>' THEN '<' statements '>' OTHERWISE '<' statements '>'

    '<'  shift, and go to state 57


State 36

   12 complex_identifier: ID FROM . complex_identifier

    ID  shift, and go to state 6

    complex_identifier  go to state 58


State 37

   43 output: QUOTE '<' . expression '>'

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 59
    input               go to state 23


State 38

   44 input: SUMMON '<' . complex_identifier '>'

    ID  shift, and go to state 6

    complex_identifier  go to state 60


State 39

   25 expression: '<' expression . '>'
   26           | expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51
    '>'           shift, and go to state 61


State 40

    0 $accept: programm $end .

    $default  accept


State 41

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 42

   28 expression: expression DIVIDED . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 62
    input               go to state 23


State 43

   29 expression: expression REMINDING . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 63
    input               go to state 23


State 44

   26 expression: expression ADDING . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 64
    input               go to state 23


State 45

   27 expression: expression CONSPIRING . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 65
    input               go to state 23


State 46

   30 expression: expression EMPOWERING . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 66
    input               go to state 23


State 47

   31 expression: expression BOOL_IS . expression
   32           | expression BOOL_IS . NOT expression

    NOT         shift, and go to state 67
    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 68
    input               go to state 23


State 48

   35 expression: expression BOOL_UP . BOOL_TO BOOL_LOWER BOOL_THAN expression

    BOOL_TO  shift, and go to state 69


State 49

   36 expression: expression BOOL_DOWN . BOOL_TO BOOL_GREATER BOOL_THAN expression

    BOOL_TO  shift, and go to state 70


State 50

   33 expression: expression BOOL_LOWER . BOOL_THAN expression

    BOOL_THAN  shift, and go to state 71


State 51

   34 expression: expression BOOL_GREATER . BOOL_THAN expression

    BOOL_THAN  shift, and go to state 72


State 52

   19 declaration: ENTER FIXED var_type . ID
   21            | ENTER FIXED var_type . ID TELLING expression

    ID  shift, and go to state 73


State 53

   18 declaration: ENTER var_type ID .
   20            | ENTER var_type ID . TELLING expression

    TELLING  shift, and go to state 74

    $default  reduce using rule 18 (declaration)


State 54

   24 struct_decl: PROCLAIM ID '<' . decl_list '>'

    ENTER  shift, and go to state 1

    declaration  go to state 75
    decl_list    go to state 76


State 55

   17 assign: LET complex_identifier BE . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 77
    input               go to state 23


State 56

   47 while_statement: SINCE expression '<' . statements '>'

    ENTER       shift, and go to state 1
    PROCLAIM    shift, and go to state 2
    LET         shift, and go to state 3
    SINCE       shift, and go to state 4
    ASK         shift, and go to state 5
    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    QUOTE       shift, and go to state 11
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    statements          go to state 78
    statement           go to state 16
    complex_identifier  go to state 17
    assign              go to state 18
    declaration         go to state 19
    struct_decl         go to state 20
    expression          go to state 21
    output              go to state 22
    input               go to state 23
    if_statement        go to state 24
    while_statement     go to state 25


State 57

   45 if_statement: ASK WHETHER '<' . expression '>' THEN '<' statements '>'
   46             | ASK WHETHER '<' . expression '>' THEN '<' statements '>' OTHERWISE '<' statements '>'

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 79
    input               go to state 23


State 58

   12 complex_identifier: ID FROM complex_identifier .

    $default  reduce using rule 12 (complex_identifier)


State 59

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression
   43 output: QUOTE '<' expression . '>'

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51
    '>'           shift, and go to state 80


State 60

   44 input: SUMMON '<' complex_identifier . '>'

    '>'  shift, and go to state 81


State 61

   25 expression: '<' expression '>' .

    $default  reduce using rule 25 (expression)


State 62

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   28           | expression DIVIDED expression .
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 28 (expression)


State 63

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   29           | expression REMINDING expression .
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 29 (expression)


State 64

   26 expression: expression . ADDING expression
   26           | expression ADDING expression .
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 26 (expression)


State 65

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   27           | expression CONSPIRING expression .
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 27 (expression)


State 66

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   30           | expression EMPOWERING expression .
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 30 (expression)


State 67

   32 expression: expression BOOL_IS NOT . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 82
    input               go to state 23


State 68

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   31           | expression BOOL_IS expression .
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    BOOL_IS       error (nonassociative)
    BOOL_UP       error (nonassociative)
    BOOL_DOWN     error (nonassociative)
    BOOL_LOWER    error (nonassociative)
    BOOL_GREATER  error (nonassociative)

    $default  reduce using rule 31 (expression)


State 69

   35 expression: expression BOOL_UP BOOL_TO . BOOL_LOWER BOOL_THAN expression

    BOOL_LOWER  shift, and go to state 83


State 70

   36 expression: expression BOOL_DOWN BOOL_TO . BOOL_GREATER BOOL_THAN expression

    BOOL_GREATER  shift, and go to state 84


State 71

   33 expression: expression BOOL_LOWER BOOL_THAN . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 85
    input               go to state 23


State 72

   34 expression: expression BOOL_GREATER BOOL_THAN . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 86
    input               go to state 23


State 73

   19 declaration: ENTER FIXED var_type ID .
   21            | ENTER FIXED var_type ID . TELLING expression

    TELLING  shift, and go to state 87

    $default  reduce using rule 19 (declaration)


State 74

   20 declaration: ENTER var_type ID TELLING . expression

    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13

    complex_identifier  go to state 17
    expression          go to state 88
    input               go to state 23


State 75

   22 decl_list: declaration .

    $default  reduce using rule 22 (decl_list)


State 76

   23 decl_list: decl_list . ',' declaration
   24 struct_decl: PROCLAIM ID '<' decl_list . '>'

    ','  shift, and go to state 89
    '>'  shift, and go to state 90


State 77

   17 assign: LET complex_identifier BE expression .
   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51

    $default  reduce using rule 17 (assign)


State 78

    3 statements: statements . statement
   47 while_statement: SINCE expression '<' statements . '>'

    ENTER       shift, and go to state 1
    PROCLAIM    shift, and go to state 2
    LET         shift, and go to state 3
    SINCE       shift, and go to state 4
    ASK         shift, and go to state 5
    ID          shift, and go to state 6
    NUMBER      shift, and go to state 7
    STRING      shift, and go to state 8
    BOOL_TRUE   shift, and go to state 9
    BOOL_FALSE  shift, and go to state 10
    QUOTE       shift, and go to state 11
    SUMMON      shift, and go to state 12
    '<'         shift, and go to state 13
    '>'         shift, and go to state 91

    statement           go to state 41
    complex_identifier  go to state 17
    assign              go to state 18
    declaration         go to state 19
    struct_decl         go to state 20
    expression          go to state 21
    output              go to state 22
    input               go to state 23
    if_statement        go to state 24
    while_statement     go to state 25


State 79

   26 expression: expression . ADDING expression
   27           | expression . CONSPIRING expression
   28           | expression . DIVIDED expression
   29           | expression . REMINDING expression
   30           | expression . EMPOWERING expression
   31           | expression . BOOL_IS expression
   32           | expression . BOOL_IS NOT expression
   33           | expression . BOOL_LOWER BOOL_THAN expression
   34           | expression . BOOL_GREATER BOOL_THAN expression
   35           | expression . BOOL_UP BOOL_TO BOOL_LOWER BOOL_THAN expression
   36           | expression . BOOL_DOWN BOOL_TO BOOL_GREATER BOOL_THAN expression
   45 if_statement: ASK WHETHER '<' expression . '>' THEN '<' statements '>'
   46             | ASK WHETHER '<' expression . '>' THEN '<' statements '>' OTHERWISE '<' statements '>'

    DIVIDED       shift, and go to state 42
    REMINDING     shift, and go to state 43
    ADDING        shift, and go to state 44
    CONSPIRING    shift, and go to state 45
    EMPOWERING    shift, and go to state 46
    BOOL_IS       shift, and go to state 47
    BOOL_UP       shift, and go to state 48
    BOOL_DOWN     shift, and go to state 49
    BOOL_LOWER    shift, and go to state 50
    BOOL_GREATER  shift, and go to state 51
    '>'           shift, and go to state 92


State 80

   43 output: QUOTE '<' expression '>' .

    $default  reduce using rule 43 (output)


State 81

   44 input: SUMMON '<' complex_identifier '>' .

    $default  reduce using rule 44 (input)


State 82
